<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="11">

                    <Button
                        android:id="@+id/btn_minus_height"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_minus" />

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_height" />

                        <EditText
                            android:id="@+id/edt_height"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:text="@string/text_default_val_height" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_plus_height"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_plus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="11">

                    <Button
                        android:id="@+id/btn_minus_weight"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_minus" />

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_weight" />

                        <EditText
                            android:id="@+id/edt_weight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:text="@string/text_default_val_weight" />
                    </LinearLayout>



                    <Button
                        android:id="@+id/btn_plus_weight"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_plus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="11">

                    <Button
                        android:id="@+id/btn_minus_old"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_minus" />

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_old" />

                        <EditText
                            android:id="@+id/edt_old"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:text="@string/text_default_val_old" />
                    </LinearLayout>



                    <Button
                        android:id="@+id/btn_plus_old"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_plus" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rd_gender_male_change_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/text_male" />

                    <RadioButton
                        android:id="@+id/rd_gender_female_change_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_female" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_activity_levels_for_the_day"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/spinner_activity_levels_for_the_day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:padding="5dp"
                        android:layout_margin="5dp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_calculate_tdee"
            style="@style/Button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_calculate_bmi" />

        <LinearLayout
            android:id="@+id/layout_result_tdee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:text="@string/text_your_bmr"
                    android:layout_gravity="center"
                    android:textColor="@color/bg_black"/>

                <TextView
                    android:id="@+id/tv_result_bmr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:layout_gravity="center"
                    android:textColor="@color/bg_black"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:text="@string/text_your_tdee"
                    android:layout_gravity="center"
                    android:textColor="@color/bg_black"
                    />

                <TextView
                    android:id="@+id/tv_result_tdee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/bg_black"
                    android:textSize="26sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>