<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="11">

                    <Button
                        android:id="@+id/btn_minus_height"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_minus" />

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_height" />

                        <EditText
                            android:id="@+id/edt_height"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:text="@string/text_default_val_height" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_plus_height"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_plus" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="11">

                    <Button
                        android:id="@+id/btn_minus_weight"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_minus" />

                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/text_weight" />

                        <EditText
                            android:id="@+id/edt_weight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:text="@string/text_default_val_weight" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_plus_weight"
                        style="@style/Button_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:padding="10dp"
                        android:text="@string/text_plus" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_calculate_bmi"
            style="@style/Button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_calculate_bmi" />

        <Button
            android:id="@+id/btn_show_bmi_table"
            style="@style/Button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_show_bmi_table"
            android:layout_marginTop="10dp"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_bmi_result_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar_bmi_result"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="false"
                android:max="50"
                android:progress="25"
                android:progressDrawable="@drawable/circle" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_result"
                    android:textColor="@color/bg_black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_bmi_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/bg_black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_status"
                    android:textColor="@color/bg_black"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/tv_bmi_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/bg_black"
                    android:textSize="20sp"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/bg_green"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </LinearLayout>

</ScrollView>